--- a/components/Section-I/main.tex
+++ b/components/Section-I/main.tex
@@ -3,8 +3,8 @@
 
 \section*{\textbf{LỜI MỞ ĐẦU}}
 \addcontentsline{toc}{section}{LỜI MỞ ĐẦU}
-Trong thời đại công nghệ số phát triển mạnh mẽ, mạng xã hội đã trở thành một phần không thể thiếu trong đời sống con người. Các nền tảng như Facebook, Twitter, Instagram hay Threads của Meta giúp kết nối hàng triệu người dùng trên toàn thế giới, hỗ trợ giao tiếp, chia sẻ thông tin và mở rộng cơ hội kinh doanh.
+Trong bối cảnh chuyển đổi số đang diễn ra mạnh mẽ trên toàn cầu, việc ứng dụng công nghệ vào đời sống hàng ngày đã trở thành xu thế tất yếu. Đặc biệt trong lĩnh vực tài chính, thanh toán không dùng tiền mặt đang dần thay thế các phương thức truyền thống nhờ sự tiện lợi, an toàn và tốc độ vượt trội. Tại môi trường giáo dục đại học, nhu cầu về một hệ thống thanh toán thông minh, tích hợp đa tiện ích cho sinh viên ngày càng trở nên cấp thiết.
 
-Threads, một nền tảng mới của Meta, được thiết kế để tối ưu hóa khả năng tương tác nhanh chóng, đơn giản hóa trải nghiệm chia sẻ nội dung dưới dạng văn bản, hình ảnh và video. Với sự thành công ban đầu của Threads, ý tưởng xây dựng một nền tảng mạng xã hội tương tự giúp sinh viên hiểu rõ hơn về cách phát triển một hệ thống mạng xã hội từ đầu, ứng dụng công nghệ hiện đại và tối ưu hóa hiệu suất.
+Nắm bắt được nhu cầu đó, đồ án này tập trung nghiên cứu và phát triển ``Nền tảng Ví điện tử Sinh viên'' - một giải pháp tài chính số toàn diện. Hệ thống không chỉ giúp sinh viên đơn giản hóa việc thanh toán các dịch vụ trong khuôn viên trường thông qua công nghệ NFC và Mobile App, mà còn cung cấp công cụ quản lý chi tiêu hiệu quả tích hợp trí tuệ nhân tạo.
 
-Chính vì vậy, nhóm chúng tôi quyết định thực hiện đồ án “Xây dựng website mạng xã hội Honey” với mục tiêu xây dựng một hệ thống mạng xã hội có đầy đủ các tính năng quan trọng như đăng bài, bình luận, theo dõi người dùng, trò chuyện trực tuyến và thông báo thời gian thực.
+Với sự kết hợp giữa ứng dụng di động hiện đại và cổng thông tin quản trị website mạnh mẽ, dự án mong muốn kiến tạo một hệ sinh thái thanh toán không tiền mặt văn minh, minh bạch và tối ưu hóa trải nghiệm cho cả sinh viên lẫn nhà trường, góp phần thúc đẩy tiến trình số hóa trong môi trường giáo dục.
