--- a/components/Section-II/main.tex
+++ b/components/Section-II/main.tex
@@ -4,12 +4,10 @@
 \section*{\textbf{LỜI CAM ĐOAN}}
 \addcontentsline{toc}{section}{LỜI CAM ĐOAN}
 
-Nhóm chúng em xin cam đoan rằng đồ án \textbf{“Xây dựng website mạng xã hội Honey”} là kết quả nghiên cứu và thực hiện của tất cả thành viên, dưới sự hướng dẫn của giảng viên \textbf{Trần Văn Hùng}.
+Nhóm chúng em xin cam đoan rằng đồ án \textbf{“Nền tảng Ví điện tử Sinh viên”} là kết quả nghiên cứu và thực hiện của tất cả thành viên trong nhóm, dưới sự hướng dẫn khoa học của giảng viên.
 
-Toàn bộ nội dung trong đồ án này được chúng tôi tìm hiểu, phân tích và triển khai dựa trên kiến thức đã học, các tài liệu tham khảo có trích dẫn đầy đủ. Chúng tôi cam kết không sao chép hoặc sử dụng trái phép nội dung từ bất kỳ nguồn nào mà không ghi rõ nguồn gốc.
+Toàn bộ nội dung, số liệu và kết quả trình bày trong đồ án này là trung thực, được chúng tôi tìm hiểu, phân tích và xây dựng dựa trên kiến thức chuyên môn và các tài liệu tham khảo uy tín. Các chức năng của hệ thống như thanh toán NFC, tích hợp cổng thanh toán MoMo, và chatbot AI đều được nhóm tự nghiên cứu và phát triển. Chúng tôi cam kết không sao chép nguyên văn hoặc sử dụng trái phép nội dung từ bất kỳ nguồn nào mà không có trích dẫn rõ ràng.
 
-Nếu phát hiện có bất kỳ hành vi đạo văn hoặc gian lận nào trong đồ án này, tôi xin chịu hoàn toàn trách nhiệm trước nhà trường và hội đồng đánh giá.
+Nếu phát hiện có bất kỳ hành vi đạo văn hoặc gian lận nào trong quá trình thực hiện đồ án này, chúng tôi xin chịu hoàn toàn trách nhiệm trước Nhà trường và Hội đồng đánh giá.
 
-Tôi xin chân thành cảm ơn!
-
- 
+Chúng tôi xin chân thành cảm ơn!
