--- a/components/Section-III/main.tex
+++ b/components/Section-III/main.tex
@@ -1,124 +1,87 @@
 
 \newpage
 
-\section{\textbf{TỔNG QUAN VỀ HONEY SOCIAL }}
+\section{\textbf{TỔNG QUAN VỀ NỀN TẢNG VÍ ĐIỆN TỬ SINH VIÊN}}
 
-\subsection{Giới thiệu} 
-Trong thời đại công nghệ số phát triển mạnh mẽ, mạng xã hội đã trở thành một phần không thể thiếu trong đời sống con người, hỗ trợ kết nối, chia sẻ thông tin và mở rộng cơ hội kinh doanh. Các nền tảng như Facebook, Twitter, Instagram hay Threads của Meta đã đạt được thành công lớn trong việc kết nối hàng triệu người dùng trên toàn cầu. Tuy nhiên, các nền tảng này vẫn đối mặt với các thách thức như nội dung độc hại, thiếu cá nhân hóa thông minh, và trải nghiệm người dùng chưa tối ưu.
+\subsection{Giới thiệu}
+Trong môi trường đại học hiện đại, các giao dịch tài chính hàng ngày của sinh viên như thanh toán tại căn tin, cửa hàng tiện lợi, hay đóng các khoản phí nhỏ thường vẫn phụ thuộc nhiều vào tiền mặt. Điều này không chỉ gây bất tiện về mặt thời gian xử lý, khó khăn trong việc quản lý chi tiêu cá nhân mà còn tiềm ẩn rủi ro mất mát. Mặc dù các ví điện tử phổ biến như MoMo hay ZaloPay đã phát triển mạnh, nhưng vẫn thiếu một giải pháp chuyên biệt được tùy biến sâu cho hệ sinh thái của trường đại học, tích hợp chặt chẽ với thẻ sinh viên và các dịch vụ nội bộ.
 
-Đồ án ``Xây dựng website mạng xã hội Honey'' được thực hiện với mục tiêu phát triển một nền tảng mạng xã hội hiện đại, tích hợp trí tuệ nhân tạo (AI) để mang lại trải nghiệm an toàn, thông minh và cá nhân hóa cho người dùng. Hệ thống sử dụng các công nghệ tiên tiến như MERN Stack, OpenAI Moderation API, Elasticsearch, và RabbitMQ để đảm bảo hiệu suất cao, khả năng mở rộng, và quản lý nội dung hiệu quả. Chương này sẽ trình bày tổng quan về hệ thống, bao gồm mục đích, yêu cầu chức năng, thiết kế tương tác, phương pháp tiếp cận, và các công nghệ triển khai.
+Đồ án ``Nền tảng Ví điện tử Sinh viên'' được xây dựng nhằm giải quyết các vấn đề trên thông qua một hệ thống thanh toán khép kín, hiện đại. Dự án cung cấp một ứng dụng di động đa nền tảng cho sinh viên và một cổng quản trị web cho nhà trường, tích hợp các công nghệ tiên tiến như NFC cho thanh toán một chạm và AI Chatbot để tư vấn tài chính. Chương này sẽ trình bày tổng quan về bối cảnh, mục tiêu, yêu cầu chức năng và kiến trúc kỹ thuật của hệ thống.
 
 \subsection{Tổng quan hệ thống}
 \subsubsection{Mục đích hệ thống}
-Mạng xã hội Honey được thiết kế để cung cấp một nền tảng kết nối cộng đồng, cho phép người dùng chia sẻ bài viết, tương tác (thích, bình luận), theo dõi lẫn nhau, và trò chuyện theo thời gian thực. Hệ thống tích hợp AI để cá nhân hóa nội dung, kiểm duyệt tự động, và hỗ trợ người dùng thông qua chatbot thông minh. Mục tiêu chính bao gồm:
+Hệ thống được thiết kế với mục tiêu cốt lõi là hiện đại hóa trải nghiệm thanh toán trong khuôn viên trường học. Các mục tiêu cụ thể bao gồm:
 \begin{itemize}
-    \item Xây dựng một nền tảng mạng xã hội với giao diện thân thiện, responsive, hỗ trợ chế độ sáng/tối.
-    \item Tăng cường trải nghiệm người dùng thông qua gợi ý bài viết cá nhân hóa và tìm kiếm thông minh.
-    \item Đảm bảo an toàn nội dung bằng cách tích hợp OpenAI Moderation API để kiểm duyệt văn bản và hình ảnh.
-    \item Tối ưu hóa hiệu suất hệ thống với Redis caching, RabbitMQ, và Elasticsearch KNN.
+    \item \textbf{Tiện lợi hóa thanh toán}: Thay thế tiền mặt và thẻ vật lý bằng thanh toán NFC một chạm hoặc QR Code ngay trên điện thoại.
+    \item \textbf{Quản lý tài chính thông minh}: Cung cấp cho sinh viên công cụ theo dõi lịch sử giao dịch chi tiết và nhận tư vấn chi tiêu từ trợ lý ảo AI.
+    \item \textbf{Tối ưu hóa quản lý}: Cung cấp cho nhà trường công cụ quản lý tập trung các giao dịch, doanh thu và tài khoản sinh viên.
+    \item \textbf{An toàn và bảo mật}: Đảm bảo tính toàn vẹn của giao dịch và dữ liệu người dùng thông qua các chuẩn bảo mật hiện đại.
 \end{itemize}
 
-Hệ thống không nhằm cạnh tranh với các nền tảng lớn như Facebook hay Instagram, mà tập trung vào việc cung cấp một giải pháp mạng xã hội quy mô vừa phải, ứng dụng công nghệ hiện đại để giải quyết các vấn đề về nội dung, bảo mật, và trải nghiệm người dùng.
-
-\subsubsection{Khảo sát các sản phẩm tương tự}
-Các nền tảng mạng xã hội hiện tại như Threads, Instagram, và Twitter đã đạt được nhiều thành công, nhưng vẫn tồn tại một số hạn chế:
+\subsubsection{Khảo sát hiện trạng và giải pháp}
+Hiện tại, sinh viên thường gặp các vấn đề:
 \begin{itemize}
-    \item \textbf{Threads (Meta)}: Tối ưu hóa tương tác nhanh với nội dung dạng văn bản, hình ảnh, và video, nhưng thiếu các tính năng cá nhân hóa thông minh và kiểm duyệt tự động hiệu quả.
-    \item \textbf{Instagram}: Tập trung vào hình ảnh và video, nhưng các gợi ý nội dung đôi khi thiếu chính xác và không hỗ trợ chatbot thông minh.
-    \item \textbf{Twitter}: Hỗ trợ chia sẻ nhanh chóng, nhưng gặp vấn đề về nội dung độc hại và kiểm duyệt thủ công tốn kém.
+    \item \textbf{Tiền mặt}: Tốn thời gian thối tiền, dễ rơi rớt, khó thống kê chi tiêu.
+    \item \textbf{Thẻ ATM/Thẻ sinh viên}: Cần mang theo thẻ vật lý, quy trình thanh toán qua POS đôi khi chậm.
+    \item \textbf{Ví điện tử đại chúng}: Chưa tích hợp sâu với các dịch vụ đặc thù của trường (ví dụ: tích hợp thẻ thư viện, vé xe, giảm giá nội bộ).
 \end{itemize}
 
-Dựa trên khảo sát, Honey Social đề xuất các cải tiến:
+Giải pháp ``Ví điện tử Sinh viên'' mang lại sự khác biệt:
 \begin{itemize}
-    \item Tích hợp OpenAI Moderation API để tự động kiểm duyệt nội dung.
-    \item Sử dụng vector embeddings và Elasticsearch KNN để gợi ý bài viết cá nhân hóa.
-    \item Triển khai chatbot AI hỗ trợ người dùng tương tác và báo cáo nội dung vi phạm.
+    \item Tích hợp công nghệ NFC, tận dụng hạ tầng thẻ hoặc điện thoại có sẵn.
+    \item Hệ thống nạp/rút tiền linh hoạt, kết nối trực tiếp với cổng thanh toán MoMo.
+    \item Chatbot AI (Google Gemini) tích hợp sẵn để hỗ trợ giải đáp thắc mắc và tư vấn tài chính cá nhân hóa.
 \end{itemize}
 
 \subsubsection{Yêu cầu hoạt động của ứng dụng}
-\subsubsubsection{Phần dành cho người dùng cuối}
-Người dùng cuối (end-user) có thể thực hiện các chức năng sau:
+\textbf{Phần dành cho Sinh viên (Mobile App)}
+
+Ứng dụng di động là cổng giao tiếp chính của sinh viên với hệ thống, bao gồm các chức năng:
 \begin{itemize}
-    \item \textbf{Đăng ký và đăng nhập}: Tạo tài khoản với xác thực email qua Resend API, đăng nhập an toàn bằng JWT.
-    \item \textbf{Quản lý hồ sơ}: Cập nhật thông tin cá nhân, ảnh đại diện (lưu trữ trên Cloudinary), và xem hồ sơ của người dùng khác.
-    \item \textbf{Đăng bài viết}: Tạo bài viết với văn bản và hình ảnh, chia sẻ liên kết bài viết.
-    \item \textbf{Tương tác bài viết}: Thích, bình luận, và phản hồi bình luận.
-    \item \textbf{Xem bảng tin}: Hiển thị bài viết từ người dùng đang theo dõi và gợi ý bài viết dựa trên sở thích.
-    \item \textbf{Tìm kiếm nâng cao}: Sử dụng Elasticsearch để tìm kiếm bài viết với fuzzy matching và gợi ý vector.
-    \item \textbf{Trò chuyện AI}: Tương tác với chatbot AI để nhận hỗ trợ hoặc gợi ý nội dung.
-    \item \textbf{Báo cáo bài viết}: Gửi báo cáo về nội dung vi phạm với lý do cụ thể.
-    \item \textbf{Thông báo}: Nhận thông báo thời gian thực về tương tác (thích, bình luận) qua Socket.IO.
+    \item \textbf{Quản lý tài khoản}: Đăng ký, đăng nhập bảo mật, cập nhật thông tin cá nhân.
+    \item \textbf{Ví điện tử}: Xem số dư thời gian thực, nạp tiền vào ví thông qua cổng MoMo.
+    \item \textbf{Thanh toán NFC}: Thực hiện thanh toán không tiếp xúc tại các điểm chấp nhận trong trường.
+    \item \textbf{Lịch sử giao dịch}: Xem danh sách chi tiết các giao dịch nạp/rút/thanh toán với bộ lọc thời gian.
+    \item \textbf{Trợ lý ảo AI}: Chat với AI để hỏi về số dư, lịch sử chi tiêu hoặc nhận lời khuyên quản lý tài chính.
 \end{itemize}
 
-\subsubsubsection{Phần dành cho người quản trị}
-Quản trị viên (admin) có các chức năng:
+\textbf{Phần dành cho Quản trị viên (Web Portal)}
+
+Cổng thông tin web dành cho ban quản lý nhà trường hoặc bộ phận tài chính:
 \begin{itemize}
-    \item \textbf{Quản lý người dùng}: Xem, chỉnh sửa, hoặc khóa tài khoản người dùng.
-    \item \textbf{Quản lý nội dung báo cáo}: Xem xét và xử lý báo cáo vi phạm (xóa bài viết, khóa tài khoản, hoặc bỏ qua).
-    \item \textbf{Phân loại vi phạm}: Đánh giá mức độ vi phạm (nhẹ, vừa, nặng) để đưa ra hành động phù hợp.
-    \item \textbf{Giao diện quản trị}: Sử dụng admin dashboard để quản lý báo cáo, tìm kiếm và lọc theo thời gian hoặc mức độ vi phạm.
+    \item \textbf{Dashboard}: Xem biểu đồ thống kê tổng quan về dòng tiền, số lượng giao dịch và người dùng mới.
+    \item \textbf{Quản lý sinh viên}: Thêm, sửa, xóa hoặc khóa tài khoản sinh viên; xem chi tiết hồ sơ.
+    \item \textbf{Quản lý giao dịch}: Tra cứu và kiểm soát toàn bộ lịch sử giao dịch trong hệ thống để đối soát.
 \end{itemize}
 
 \subsection{Thiết kế tương tác}
-Hệ thống Honey Social được thiết kế với giao diện thân thiện, responsive, hoạt động tốt trên cả desktop và mobile. Giao diện hỗ trợ chế độ sáng/tối để tối ưu trải nghiệm người dùng. Các thành phần chính bao gồm:
+Trải nghiệm người dùng (UX) là ưu tiên hàng đầu trong thiết kế hệ thống:
 \begin{itemize}
-    \item \textbf{Trang chủ/Bảng tin}: Hiển thị bài viết từ người dùng đang theo dõi và bài viết gợi ý, sử dụng lazy loading để tối ưu tốc độ tải.
-    \item \textbf{Hồ sơ người dùng}: Hiển thị thông tin cá nhân, bài viết, số lượng người theo dõi/đang theo dõi, và các nút tương tác (theo dõi, nhắn tin).
-    \item \textbf{Giao diện chat}: Hỗ trợ trò chuyện thời gian thực với người dùng khác và chatbot AI, tích hợp Socket.IO.
-    \item \textbf{Admin dashboard}: Cung cấp bảng điều khiển để quản lý báo cáo và người dùng, với khả năng tìm kiếm và lọc dữ liệu.
+    \item \textbf{Mobile App (Flutter)}: Giao diện Material Design hiện đại, tối ưu cho thao tác một tay. Các luồng thanh toán được tối giản hóa để hoàn tất trong dưới 3 bước.
+    \item \textbf{Web Admin (React.js)}: Giao diện Dashboard trực quan, sử dụng các biểu đồ và bảng dữ liệu dynamic để hỗ trợ ra quyết định nhanh chóng. Responsive design giúp quản trị viên có thể truy cập từ nhiều loại thiết bị.
 \end{itemize}
 
 \subsection{Phương pháp tiếp cận và giải quyết vấn đề}
 \subsubsection{Mô hình tổng quát hệ thống}
-Hệ thống Honey Social được xây dựng dựa trên kiến trúc MERN Stack, kết hợp với các công nghệ bổ trợ như OpenAI API, Cloudinary, Redis, và RabbitMQ. Mô hình tổng quát bao gồm:
+Hệ thống hoạt động theo mô hình Client-Server với kiến trúc vi dịch vụ (Microservices) đơn giản hóa:
 \begin{itemize}
-    \item \textbf{Client-side}: React.js quản lý giao diện, Socket.IO xử lý tương tác thời gian thực.
-    \item \textbf{Server-side}: Node.js và Express.js xử lý API, tích hợp RabbitMQ cho tác vụ bất đồng bộ và Redis cho caching.
-    \item \textbf{Cơ sở dữ liệu}: MongoDB lưu trữ dữ liệu người dùng, bài viết, tin nhắn, và báo cáo.
-    \item \textbf{Bên thứ ba}: OpenAI API (kiểm duyệt và chatbot), Cloudinary (lưu trữ media), Resend API (gửi email xác thực).
+    \item \textbf{Mobile Client}: Ứng dụng Android xây dựng bằng Flutter, giao tiếp với Server qua RESTful API.
+    \item \textbf{Web Client}: Trang quản trị React.js, giao tiếp với cùng hệ thống API.
+    \item \textbf{Backend Server}: Node.js/Express đóng vai trò trung tâm xử lý logic nghiệp vụ.
+    \item \textbf{Database}: MongoDB lưu trữ dữ liệu phi cấu trúc (NoSQL) đảm bảo khả năng mở rộng.
 \end{itemize}
 
-\subsubsection{Phương pháp xây dựng phần mềm}
-Dự án áp dụng phương pháp phát triển phần mềm Agile, với các giai đoạn:
+\subsubsection{Kiến trúc phần mềm và Công nghệ}
+Dự án sử dụng bộ công nghệ (Tech Stack) hiện đại và phổ biến:
 \begin{itemize}
-    \item Phân tích yêu cầu: Xác định các chức năng chính và công nghệ sử dụng.
-    \item Thiết kế hệ thống: Xây dựng kiến trúc MERN Stack, thiết kế cơ sở dữ liệu, và tích hợp AI.
-    \item Phát triển: Triển khai từng module (quản lý người dùng, bài viết, chat, kiểm duyệt).
-    \item Triển khai: Đưa hệ thống lên AWS EC2.
+    \item \textbf{Backend}: Node.js và Express.js cung cấp hiệu năng cao cho các tác vụ I/O. Xác thực người dùng an toàn bằng JWT (JSON Web Token).
+    \item \textbf{Database}: MongoDB (triển khai trên MongoDB Atlas) cho phép lưu trữ dữ liệu giao dịch và người dùng linh hoạt.
+    \item \textbf{Mobile}: Flutter (Dart) cho phép phát triển ứng dụng đa nền tảng với hiệu suất gần như native. Sử dụng thư viện \texttt{flutter\_nfc\_kit} cho tính năng NFC và \texttt{riverpod} cho quản lý trạng thái.
+    \item \textbf{Frontend Web}: React.js kết hợp với Material-UI mang lại giao diện quản trị chuyên nghiệp.
+    \item \textbf{Tích hợp bên thứ 3}: 
+        \begin{itemize}
+            \item \textbf{MoMo API}: Cổng thanh toán để nạp tiền vào ví.
+            \item \textbf{Google Gemini API}: Cung cấp trí tuệ nhân tạo cho tính năng Chatbot.
+        \end{itemize}
+    \item \textbf{Hạ tầng (DevOps)}: Backend được triển khai trên Railway, Frontend trên Vercel, đảm bảo tính sẵn sàng cao (High Availability).
 \end{itemize}
-
-\subsubsection{Kiến trúc phần mềm}
-Hệ thống sử dụng kiến trúc RESTful API với MERN Stack:
-\begin{itemize}
-    \item \textbf{Frontend}: React.js với component-based architecture, sử dụng Virtual DOM để render nhanh.
-    \item \textbf{Backend}: Express.js quản lý routing và middleware, tích hợp JWT cho xác thực.
-    \item \textbf{Database}: MongoDB với schema linh hoạt, hỗ trợ index trên userId để tối ưu truy vấn.
-\end{itemize}
-
-\subsubsection{Công nghệ triển khai hệ thống}
-\subsubsubsection{Server-Side}
-\begin{itemize}
-    \item \textbf{MongoDB}: Cơ sở dữ liệu NoSQL lưu trữ dữ liệu dạng JSON/BSON, quản lý người dùng, bài viết, tin nhắn, và báo cáo. Sử dụng MongoDB Atlas trên AWS để đảm bảo khả năng mở rộng.
-    \item \textbf{Node.js}: Môi trường chạy JavaScript server-side, xử lý đồng thời nhiều kết nối với mô hình bất đồng bộ.
-    \item \textbf{Express.js}: Framework nhẹ, hỗ trợ xây dựng API RESTful, quản lý routing và middleware.
-    \item \textbf{RabbitMQ}: Xử lý tác vụ bất đồng bộ, như xếp hàng kiểm duyệt nội dung.
-    \item \textbf{Redis}: Caching dữ liệu (Cache-Aside) để giảm tải cơ sở dữ liệu, tối ưu API GetFeedPosts.
-\end{itemize}
-
-\subsubsubsection{Client-Side}
-\begin{itemize}
-    \item \textbf{React.js}: Thư viện frontend xây dựng giao diện responsive, sử dụng component tái sử dụng và Virtual DOM.
-    \item \textbf{Socket.IO}: Hỗ trợ chat và thông báo thời gian thực, sử dụng WebSocket để giảm độ trễ.
-    \item \textbf{Cloudinary}: Lưu trữ và tối ưu hóa hình ảnh (avatar, bài viết), tự động nén sang WebP và điều chỉnh kích thước.
-\end{itemize}
-
-\subsubsubsection{Công nghệ bổ trợ}
-\begin{itemize}
-    \item \textbf{JWT}: Xác thực người dùng với token mã hóa, đảm bảo an toàn phiên đăng nhập.
-    \item \textbf{Elasticsearch}: Hỗ trợ tìm kiếm nâng cao và gợi ý bài viết bằng vector search (KNN).
-    \item \textbf{OpenAI API}: Kiểm duyệt nội dung (Moderation API) và cung cấp chatbot thông minh.
-    \item \textbf{Resend API}: Gửi email xác thực tài khoản.
-\end{itemize}
-
-\subsection{Tổng kết chương}
-Chương này đã trình bày tổng quan về hệ thống mạng xã hội Honey, bao gồm mục đích, khảo sát các sản phẩm tương tự, yêu cầu chức năng, thiết kế tương tác, và phương pháp triển khai. Hệ thống sử dụng MERN Stack kết hợp với các công nghệ AI hiện đại để mang lại trải nghiệm an toàn, thông minh, và hiệu quả. Chương tiếp theo sẽ đi sâu vào cơ sở lý thuyết của các công nghệ được sử dụng, bao gồm MERN Stack, JWT, Socket.IO, và OpenAI API.
